apps/custom/steel/pool/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: steel-gateway
  namespace: steel
  labels:
    app.kubernetes.io/name: steel-gateway
spec:
  selector:
    app.kubernetes.io/name: steel-gateway
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
